<resources>
    <string name="app_name">Mcs Share</string>
    <string name="startlocation">开始定位</string>
    <string name="stoplocation">关闭定位</string>

    <string name="search_get_map">热力图展示</string>

    <string name="star_time">任务开始时间</string>
    <string name="end_time">任务结束时间</string>

    <!-- add after -->

    <string name="app_version">版本:2.1.01</string>
    <string name="empty_info">空空如也</string>
    <string name="record_empty_info">当前没有任务</string>
    <string name="recycle_empty_info">您没有撤销记录</string>

    <string name="search_txv_main">搜索</string>

    <string name="location">正在获取定位..</string>

    <string name="msg">消息提示</string>
    <string name="hint">something</string>
    <string name="no_btn">取消</string>
    <string name="yes_btn">确认</string>

    <string name="all_nav">全部</string>
    <string name="other_nav">其他</string>
    <string name="folder_nav">我的任务记录</string>
    <string name="recycle_nav">最近撤销任务</string>
    <string name="noise_map_nav">噪声地图</string>
    <string name="security_nav">隐私安全</string>
    <string name="about_nav">关于</string>
    <string name="exit_nav">退出 MCS Share</string>

    <string name="title_recycle">最近删除</string>
    <string name="move_recycle">已移至 最近删除</string>
    <string name="info_recycle">将在30天后永久删除</string>
    <string name='recovery_recycle'>恢复后才能打开</string>

    <string name="content_share">分享</string>
    <string name="task_description">任务描述（不超过30个字）</string>
    <string name="task_location">任务地点</string>
    <string name="date_create">时间</string>
    <string name="time_range">要求时间范围</string>
    <string name="number_create">字数</string>
    <string name="location_create">未定位</string>
    <string name="done_create">完成</string>

    <string name="hint_quick">这里将是任务菜单..</string>
    <string name="location_quick">你在哪里?</string>

    <string name="about">关于</string>
    <string name="author_about">作者信息</string>
    <string name="other_about">其他</string>
    <string name="main_about">\n</string>
    <string name="t1_table">分享此应用给朋友</string>
    <string name="t2_table">查看更新历史</string>

    <string name="info_about">点击内容或我可以复制联系方式</string>
    <string name="more_about">如果你有什么更好的建议和改进需求,或者是发现BUG,欢迎联系我!\n\n邮箱:\n420498251@qq.com\n\n获取代码和更多信息:\nhttps://github.com/Sun-Hongbin/masterPro</string>
    <string name="bottom_about"> </string>

    <string name="update_his">更新历史</string>
    <string name="content_his">
        -20181127   v2.1\n
        1.获取任务列表功能
        2.优化UI
        3.修复重要bug
        \n
        -20181127   v2.0\n
        1.增加欢迎界面\n
        2.增加任务发布功能\n
        3.增加侧滑弹出框(开发了部分功能)\n
        4.增加关于界面\n
        5.修复很多重要bug\n
        6.优化UI和其他细节\n
        \n
        -20181016   v1.0\n
        正式版\n
        1.增加噪声检测和上传功能
        2.增加登陆和用户注册功能
    </string>

    <string name="back_wel">欢迎回来</string>
    <string name="info_wel"> </string>
    <string name="bottom_wel">Mcs Share 分享你的世界</string>

    <string name="share">分享</string>
    <string name="shareFrom">分享自McsShare</string>
    <string name="shareApp">我发现了个好玩的应用,你也来下载试试吧</string>
    <string name="shareTo">分享你的内容到....</string>
    <string name="shareImg">将内容截图分享给....</string>

    <string name="howShare">你想怎样分享你的任务</string>
    <string name="imgShare">截图分享</string>
    <string name="textShare">文字分享</string>

    <string name="title_des">第一次使用McsShare</string>
</resources>
