<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>


    <TextView
        android:layout_below="@id/image"
        android:id="@+id/main_wel"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/back_wel"
        android:layout_centerInParent="true"
        android:textColor="@color/black"
        android:textSize="16sp"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_wel"
        android:layout_centerInParent="true"
        android:layout_below="@id/main_wel"
        android:textSize="16sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/bottom_wel"
        android:layout_marginBottom="20dp"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image"
        android:layout_width="80dp"
        android:layout_height="80dp"

        android:src="@drawable/icon"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="187dp" />


</RelativeLayout>