<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        app:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="@drawable/border_bottom">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:text="@string/about"
            android:textSize="20sp" />

    </android.support.v7.widget.Toolbar>


    <TextView
        android:id="@+id/icon_about"
        android:layout_marginTop="126dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:textColor="@color/black"
        android:textSize="30sp"
        />


    <TextView
        android:id="@+id/main_about"
        android:layout_marginTop="1dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_version"
        android:textSize="13sp"
        android:layout_below="@+id/icon_about"
        android:layout_centerHorizontal="true"
        />


    <LinearLayout
        android:layout_below="@+id/main_about"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <include layout="@layout/about_table"/>

     <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="6dp"
            android:text="@string/bottom_about"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            />
    </RelativeLayout>


    </LinearLayout>


    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:src="@drawable/icon"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

</RelativeLayout>