<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="@drawable/border_bottom"
        app:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <TextView
            android:id="@+id/title_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:id="@+id/second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="46dp">

        <EditText
            android:id="@+id/input_task_description_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center|start"
            android:hint="@string/task_description"
            android:lines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/base"
            android:textCursorDrawable="@null" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:gravity="center|end">

            <include layout="@layout/buttongroup_level" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/third"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/second"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/date_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/date_create" />

        <TextView
            android:id="@+id/location_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginRight="10dp"
            android:gravity="end"
            android:hint="@string/location_create" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/fourth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/second"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/input_task_location_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center|start"
            android:hint="@string/task_location"
            android:lines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/base"
            android:textCursorDrawable="@null" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout_startTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fourth"
        android:layout_marginTop="50dp">

        <Button
            android:id="@+id/start_time_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/star_time"
            android:background="@color/white"/>

        <TextView
            android:id="@+id/start_time_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/start_time_id"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout_endTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RelativeLayout_startTime"
        android:layout_marginTop="15dp">

        <Button
            android:id="@+id/end_time_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/end_time" />

        <TextView
            android:id="@+id/end_time_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/end_time_id" />

    </RelativeLayout>

</RelativeLayout>
